--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "antd": "^4.13.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
