--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.13.0",
     "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
     "save": "^2.4.0",
+    "shortid": "^2.2.16",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
