--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.13.0",
     "axios": "^0.21.1",
-    "eslint": "^7.26.0",
     "faker": "^5.5.3",
-    "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
@@ -48,5 +46,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "2.3.0"
   }
 }
