--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-naver-maps": "0.0.13",
     "react-redux": "^7.2.2",
