--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-naver-maps": "0.0.13",
     "react-redux": "^7.2.2",
