--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-lines-ellipsis": "^0.15.0",
     "react-naver-maps": "0.0.13",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
