--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "save": "^2.4.0",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.1",
