--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.13.0",
     "axios": "^0.21.1",
     "faker": "^5.5.3",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
