--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.13.0",
     "axios": "^0.21.1",
+    "bcrypt-nodejs": "0.0.3",
     "faker": "^5.5.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
