가맹점 등록 및 수정 영업담당자 추가 및 기사 등록 기사그룹 추가

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nnbox-partner-frontend",
+  "name": "nnbox-control-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
