--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-hamburger-menu": "^1.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-lines-ellipsis": "^0.15.0",
